@@ -15,6 +15,10 @@ system</refpurpose>
     <classsynopsis language="python">
       <ooclass><classname>gtk.gdk.Event</classname></ooclass>
       <ooclass><classname>gobject.GBoxed</classname></ooclass>
+      <constructorsynopsis language="python">
+	<methodname><link linkend="constructor-gdkevent">gtk.gdk.Event</link></methodname>
+	<methodparam><parameter role="keyword">type</parameter></methodparam>
+      </constructorsynopsis>
       <methodsynopsis language="python">
 	<methodname><link
 linkend="method-gdkevent--put">put</link></methodname>
@@ -92,16 +96,17 @@ linkend="function-gdk--get-show-events">gtk.gdk.get_show_events</link></methodna
 
     <para>The attributes available for a <link
 linkend="class-gdkevent"><classname>gtk.gdk.Event</classname></link> are
-dependent on the type of the event. The event types are listed in the <link
-linkend="description-gdkevent">Description</link> section.</para>
+dependent on the type of the event. The event types are described in the
+<link linkend="description-gdkevent">Description</link> section.</para>
 
     <refsect2>
-      <title>gtk.gdk.NOTHING</title>
-      <title>gtk.gdk.DELETE</title>
-      <title>gtk.gdk.DESTROY</title>
-      <title>gtk.gdk.MAP</title>
-      <title>gtk.gdk.UNMAP</title>
-      <title>gtk.gdk.NO_EXPOSE</title>
+
+      <title><literal>gtk.gdk.NOTHING</literal></title>
+      <title><literal>gtk.gdk.DELETE</literal></title>
+      <title><literal>gtk.gdk.DESTROY</literal></title>
+      <title><literal>gtk.gdk.MAP</literal></title>
+      <title><literal>gtk.gdk.UNMAP</literal></title>
+      <title><literal>gtk.gdk.NO_EXPOSE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -142,7 +147,7 @@ explicitly.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.EXPOSE</title>
+      <title><literal>gtk.gdk.EXPOSE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -199,7 +204,7 @@ normally needed.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.MOTION_NOTIFY</title>
+      <title><literal>gtk.gdk.MOTION_NOTIFY</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -304,10 +309,10 @@ of the screen.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.BUTTON_PRESS</title>
-      <title>gtk.gdk._2BUTTON_PRESS</title>
-      <title>gtk.gdk._3BUTTON_PRESS</title>
-      <title>gtk.gdk.BUTTON_RELEASE</title>
+      <title><literal>gtk.gdk.BUTTON_PRESS</literal></title>
+      <title><literal>gtk.gdk._2BUTTON_PRESS</literal></title>
+      <title><literal>gtk.gdk._3BUTTON_PRESS</literal></title>
+      <title><literal>gtk.gdk.BUTTON_RELEASE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -414,8 +419,8 @@ of the screen.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.KEY_PRESS</title>
-      <title>gtk.gdk.KEY_RELEASE</title>
+      <title><literal>gtk.gdk.KEY_PRESS</literal></title>
+      <title><literal>gtk.gdk.KEY_RELEASE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -488,8 +493,8 @@ completed.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.ENTER_NOTIFY</title>
-      <title>gtk.gdk.LEAVE_NOTIFY</title>
+      <title><literal>gtk.gdk.ENTER_NOTIFY</literal></title>
+      <title><literal>gtk.gdk.LEAVE_NOTIFY</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -605,7 +610,7 @@ keys (e.g. <keycap>Control</keycap>, <keycap>Shift</keycap> and
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.FOCUS_CHANGE</title>
+      <title><literal>gtk.gdk.FOCUS_CHANGE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -653,7 +658,7 @@ keyboard focus, <literal>FALSE</literal> if it has lost the focus.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.CONFIGURE</title>
+      <title><literal>gtk.gdk.CONFIGURE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -720,7 +725,7 @@ parent.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.PROPERTY_NOTIFY</title>
+      <title><literal>gtk.gdk.PROPERTY_NOTIFY</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -781,9 +786,9 @@ explicitly.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.SELECTION_CLEAR</title>
-      <title>gtk.gdk.SELECTION_REQUEST</title>
-      <title>gtk.gdk.SELECTION_NOTIFY</title>
+      <title><literal>gtk.gdk.SELECTION_CLEAR</literal></title>
+      <title><literal>gtk.gdk.SELECTION_REQUEST</literal></title>
+      <title><literal>gtk.gdk.SELECTION_NOTIFY</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -857,8 +862,8 @@ property.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.PROXIMITY_IN</title>
-      <title>gtk.gdk.PROXIMITY_OUT</title>
+      <title><literal>gtk.gdk.PROXIMITY_IN</literal></title>
+      <title><literal>gtk.gdk.PROXIMITY_OUT</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -911,12 +916,12 @@ explicitly.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.DRAG_ENTER</title>
-      <title>gtk.gdk.DRAG_LEAVE</title>
-      <title>gtk.gdk.DRAG_MOTION</title>
-      <title>gtk.gdk.DRAG_STATUS</title>
-      <title>gtk.gdk.DRAG_START</title>
-      <title>gtk.gdk.DRAG_FINISHED</title>
+      <title><literal>gtk.gdk.DRAG_ENTER</literal></title>
+      <title><literal>gtk.gdk.DRAG_LEAVE</literal></title>
+      <title><literal>gtk.gdk.DRAG_MOTION</literal></title>
+      <title><literal>gtk.gdk.DRAG_STATUS</literal></title>
+      <title><literal>gtk.gdk.DRAG_START</literal></title>
+      <title><literal>gtk.gdk.DRAG_FINISHED</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -987,7 +992,7 @@ of the screen only set for <literal>gtk.gdk.DRAG_MOTION</literal> and
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.CLIENT_EVENT</title>
+      <title><literal>gtk.gdk.CLIENT_EVENT</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -1049,7 +1054,7 @@ in each data element, i.e. 8, 16, or 32.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.VISIBILITY_NOTIFY</title>
+      <title><literal>gtk.gdk.VISIBILITY_NOTIFY</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -1099,7 +1104,7 @@ explicitly.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.SCROLL</title>
+      <title><literal>gtk.gdk.SCROLL</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -1198,7 +1203,7 @@ of the screen.</entry>
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.WINDOW_STATE</title>
+      <title><literal>gtk.gdk.WINDOW_STATE</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -1259,7 +1264,7 @@ combination of: <literal>gtk.gdk.WINDOW_STATE_WITHDRAWN</literal>,
     </refsect2>
 
     <refsect2>
-      <title>gtk.gdk.SETTING</title>
+      <title><literal>gtk.gdk.SETTING</literal></title>
 
       <blockquote role="properties">
 	<informaltable pgwide="1" frame="none">
@@ -1536,7 +1541,129 @@ explicitly.</entry>
 	</varlistentry>
       </variablelist>
 
-    <para></para>
+    <para>A set of bit-flags is used to indicate which events a window is to
+receive. Most of these masks map onto one or more of the event types
+above.</para>
+
+    <para>The <literal>gtk.gdk.POINTER_MOTION_HINT_MASK</literal> is a
+special mask which is used to reduce the number of
+<literal>gtk.gdk.MOTION_NOTIFY</literal> events received. Normally a
+<literal>gtk.gdk.MOTION_NOTIFY</literal> event is received each time the
+mouse moves. However, if the application spends a lot of time processing the
+event (updating the display, for example), it can easily lag behind the
+position of the mouse. When using the
+<literal>gtk.gdk.POINTER_MOTION_HINT_MASK</literal> the server will only
+send a single <literal>gtk.gdk.MOTION_NOTIFY</literal> event (which is
+marked as a hint) until the application asks for more, by calling the <link
+linkend="method-gdkwindow--get-pointer"><methodname>gtk.gdk.Window.get_pointer</methodname>()</link>
+method. The masks are:</para>
+
+    <itemizedlist>
+      <listitem>
+	<simpara><literal>gtk.gdk.EXPOSURE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.POINTER_MOTION_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.POINTER_MOTION_HINT_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON_MOTION_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON1_MOTION_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON2_MOTION_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON3_MOTION_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON_PRESS_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.BUTTON_RELEASE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.KEY_PRESS_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.KEY_RELEASE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.ENTER_NOTIFY_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.LEAVE_NOTIFY_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.FOCUS_CHANGE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.STRUCTURE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.PROPERTY_CHANGE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.VISIBILITY_NOTIFY_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.PROXIMITY_IN_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.PROXIMITY_OUT_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.SUBSTRUCTURE_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.SCROLL_MASK</literal></simpara>
+      </listitem>
+      <listitem>
+	<simpara><literal>gtk.gdk.ALL_EVENTS_MASK</literal></simpara>
+      </listitem>
+    </itemizedlist>
+
+    <para><literal>gtk.gdk.ALL_EVENTS_MASK</literal> is a combination of all
+the event masks.</para>
+
+  </refsect1>
+
+  <refsect1 id="constructor-gdkevent">
+    <title>Constructor</title>
+
+    <programlisting><constructorsynopsis language="python">
+	<methodname>gtk.gdk.Event</methodname>
+	<methodparam><parameter role="keyword">type</parameter></methodparam>
+      </constructorsynopsis></programlisting>
+    <variablelist>
+      <varlistentry>
+	<term><parameter>type</parameter>&nbsp;:</term> <listitem><simpara>a
+	event type - see the <link
+	linkend="description-gdkevent">Description</link>
+	above</simpara></listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis>Returns</emphasis>&nbsp;:</term>
+	<listitem><simpara>a newly-allocated <link
+	linkend="class-gdkevent"><classname>gtk.gdk.Event</classname></link>. The
+	returned <link
+	linkend="class-gdkevent"><classname>gtk.gdk.Event</classname></link>
+	should be freed with <link
+	linkend="method-gdkevent--free"><methodname>gtk.gdk.Event.free()</methodname></link>.</simpara></listitem>
+      </varlistentry>
+    </variablelist>
+
+    <note>
+      <para>This constructor is available in PyGTK 2.2 and above.</para>
+    </note>
+
+    <para>Creates a new <link
+linkend="class-gdkevent"><classname>gtk.gdk.Event</classname></link> of the
+given type. All fields are set to 0.</para>
 
   </refsect1>
 
@@ -1632,6 +1759,10 @@ stamp from the event, if there is one; otherwise returns 0.</para>
 	  <listitem><simpara>the modifier state</simpara></listitem>
 	</varlistentry>
       </variablelist>
+
+      <note>
+	<para>This method is available in PyGTK 2.4 and above.</para>
+      </note>
 
       <para>The <methodname>get_state</methodname>() method returns the
 value of the modifier "state" field. If the event has no "state" field the
