@@ -34,6 +34,10 @@
 	* pygtk-gdkdrawable.xml ("xid") ("handle")
 	Add attribute descriptions.
 
+	* pygtk-gdkevent.xml (get_state) Add note about availability.
+	Added description of event masks.
+	(gtk.gdk.Event) Added for PyGTK 2.2.
+
 2004-04-19  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktreeview.xml (expand_to_path) (map_expanded_rows)
